--- a/zenburn.css
+++ b/zenburn.css
@@ -19,7 +19,7 @@ QUIT #bc6c4c
 */
 
 :root {
-  --body-color: #dcdccc;
+  --body-color: #edede5;
   --window-bg-color: #3f3f3f;
   --link-color: #8c8cbc;
   --unread-marker-color: #dfaf8f;
@@ -37,6 +37,10 @@ html {
 body {
   background: #2b2b2b;
   color: var(--body-color);
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
 }
 
 #loading .logo,
@@ -148,10 +152,22 @@ body {
 .irc-fg5 { color: #e969a7; }
 .irc-fg12 { color: #6fb7ff; }
 
-/* Message form */
+/* Search form */
+form.message-search input,
+form.message-search input::placeholder {
+  color: #222 !important;
+}
+
+/* Message fmrm */
 #form {
   background: #333;
   border-color: #101010;
+}
+
+@media (max-width: 479px) {
+  #form {
+    padding-bottom: 1.5rem;
+  }
 }
 
 #windows #form .input {
@@ -211,6 +227,10 @@ body {
 
 #chat .unhandled .from {
   color: #aaa;
+}
+
+#chat .msg {
+  font-size: 15px;
 }
 
 #chat .msg[data-type="notice"] .time,
@@ -309,6 +329,10 @@ kbd {
 #chat-container :-ms-input-placeholder {
   color: #d2d39b;
   opacity: 0.5;
+}
+
+#chat-container ::placeholder {
+  opacity: .7;
 }
 
 /* Context menus */
